# leafmine-segmentation

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
configs/: infer.yaml  preprocess.yaml  train.yaml
scripts/: predict.py  prepare_data.py  train.py
src/leafmine_seg/datasets/: dataset.py  tiling.py  transforms.py
src/leafmine_seg/inference/: predictor.py  stitch.py
src/leafmine_seg/io/: png_writer.py
src/leafmine_seg/models/: factory.py  losses.py  metrics.py
src/leafmine_seg/preprocessing/: leaf_extractor.py
src/leafmine_seg/training/: trainer.py  validate.py
